@@ -264,6 +264,8 @@ SmbTimeserver=0
 WorkGroup=LOCALNET
 SmbNetBIOS=Wive-RTNL
 SmbString=SERVER
+PrinterSrvEnabled=0
+PrinterSrvBidir=1
 WANPingFilter=1
 port1_swmode=auto
 port2_swmode=auto
