@@ -265,6 +265,8 @@ WorkGroup=LOCALNET
 SmbNetBIOS=Wive-RTNL
 SmbString=SERVER
 WANPingFilter=1
+PrinterSrvEnabled=0
+PrinterSrvBidir=1
 port1_swmode=auto
 port2_swmode=auto
 port3_swmode=auto
