@@ -7,7 +7,8 @@ LOG="logger -t prnctrl"
 port=${MDEV##*lp}
 
 if [ "$ACTION" = "add" ]; then
-    if [ -z "`pidof p910nd`" ]; then
+    PrinterSrvEnabled=`nvram_get 2860 PrinterSrvEnabled PrinterSrvBidir`
+    if [ "$PrinterSrvEnabled" = "1" ] && [ -z "`pidof p910nd`" ]; then
 	# For GDI printers put printers firmware
 	# file in /etc, rename to prnfw.dl
 	if [ -f /etc/prnfw.dl ]; then
@@ -15,8 +16,12 @@ if [ "$ACTION" = "add" ]; then
 	    cat /etc/prnfw.dl > /dev/usb/$MDEV
 	fi
 	$LOG "Start p910nd daemon on port 910${port}"
-	/bin/p910nd -b -f /dev/usb/$MDEV $port
-	if [ -z "$(iptables -L | grep "jetdirect")" ]; then
+	if "$PrinterSrvBidir" = "1" ]; then
+	    /bin/p910nd -b -f /dev/usb/$MDEV $port
+	else
+	    /bin/p910nd -f /dev/usb/$MDEV $port
+	fi
+	if [ -z "$(iptables -L servicelimit -n | grep dpt:9100)" ]; then
 	    $LOG "Add p910nd firewall rules"
 	    iptables -A servicelimit -i $lan_if -p tcp --dport 9100 -j ACCEPT > /dev/null 2>&1
 	fi
