@@ -770,6 +770,7 @@
 13) Disable NAND Flash support per default. Not used NAND Flash in real routers devices. Use only in STB.<br>
 14) WiFi drivers disable ATE mode support, disable some debug messages, disable IAPP support(need external daemon for support).<br>
 15) Fix wireless security page.<br>
+16) Add PrinterSrvEnabled PrinterSrvBidir variables for configure print server.<br>
 
 <br><br>
 <b>For support see:</b><br>
